addons/prometheus-operator/monitoring-stack/resources/kube-state-metrics/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-state-metrics-monitoring
  namespace: PROMETHEUS_OPERATOR_NAMESPACE
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 0
      protocol: TCP
    - port: 0
      protocol: TCP
